syntax = "proto3";
package msa_utils;
option go_package = "grpc/msa_utils";

enum RoleService {
   Observer = 0;
   Monitor = 1;
   Support = 2;
   Interface = 3;
}

enum StatusService {
   On = 0;
   Off = 1;
   Starts = 2;
   Stops = 3;
   Restarts = 4;
   Down = 5;
   Created = 6;
   Updated = 7;
   Deleted = 8;
}

enum Commands {
   Start = 0;
   Stop = 1;
   Restart = 2;
}
